fix mobile spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2907,6 +2907,38 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     margin-bottom: 1.875rem;
   }
 
+  .ts-background-image-hero {
+    display: none;
+    text-align: center;
+  }
+
+  #us {
+    margin-top: 5rem;
+  }
+
+  #services-1 {
+    height: 100%;
+    margin-bottom: 5rem;
+  }
+
+  #star {
+    margin-top: 5rem;
+  }
+
+  #mission {
+    margin-top: 0;
+    padding-top: 0;
+  }
+
+  #arrow-bottom {
+    display: none;
+  }
+
+  #booking {
+    margin-top: 8rem;
+    margin-bottom: 5rem;
+  }
+
   .ts-promo-numbers h2 {
     font-size: 2.25rem;
   }
